--- a/study/todo-list.html
+++ b/study/todo-list.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <article class="todoContainer">
-      <h1 class="todoTitle">TODO_LIST</h1>
+      <h1 class="todoTitle">TODO LIST</h1>
       <form class="todoForm" action="post" action="#">
         <input class="todoInput" type="text" placeholder="할 일 입력하기" />
         <button class="todoPlusButton" type="button">추가</button>
