--- a/study/todo-list.html
+++ b/study/todo-list.html
@@ -10,7 +10,7 @@
   <body>
     <article class="todoContainer">
       <h1 class="todoTitle">TODO LIST</h1>
-      <form class="todoForm" action="post" action="#">
+      <form class="todoForm" action="">
         <input class="todoInput" type="text" placeholder="할 일 입력하기" />
         <button class="todoPlusButton" type="button">추가</button>
       </form>
