--- a/typescript/js-to-ts_todo/index.html
+++ b/typescript/js-to-ts_todo/index.html
@@ -11,5 +11,5 @@
     <input id="todo-input" type="text" />
     <button id="todo-button" type="button">투두추가</button>
   </body>
-  <script src="./index.js"></script>
+  <!-- <script src="./index.js"></script> -->
 </html>
